Java 8 main source